# skyros

./: .gitignore  README.md  collision_avoidance.py  follower.py  leader.py  mock_drone.py  pyproject.toml  requirements.txt
skyros/: drone.py  peer.py
src/skyros/: peer.py
tests/: collision_avoidance.py  hold_avoidance.py  zenoh-config.json5
tests/leader_follower/: follower.py  leader.py
tests/perf/: recv.py  send.py
